# real-time-gravity-sim

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  dev.sh  sim.json  start.sh
assets/: index.html
cli_version/src/: main.rs  physics.rs
src/: constants.rs  draw_body.js  draw_particle.js  index.html  initialiser.js  input.rs  lib.rs  main.rs  physics.rs  simulation.rs  style.css
src/js/: draw.js  initialiser.js
src/physics/: bh_tree.rs  calc_acc.rs  logger.rs
src/physics/bh_tree/: nodes.rs  print.rs
src/simulation/: bh_tree.rs  energy_conservation.rs  spawner.rs
src/simulation/bh_tree/: construction.rs
